# linux-g13-driver

source/: Makefile
source/c/: G13.cpp  G13.h  G13Action.cpp  G13Action.h  MacroAction.cpp  MacroAction.h  Main.cpp  Makefile.am  Output.cpp  PassThroughAction.cpp  PassThroughAction.h  configure.ac
